chore(Upload): fix spacing after change by UX
Because it's not released yet, we rather use chore, instead of fix, because it does not need to appear in the change logs. Or what?

--- a/packages/dnb-eufemia/src/components/upload/style/_upload.scss
+++ b/packages/dnb-eufemia/src/components/upload/style/_upload.scss
@@ -28,13 +28,6 @@
     border-radius: 0.25rem;
   }
 
-  &__condition-list {
-    &__label {
-      font-weight: var(--font-weight-medium);
-      margin-right: var(--spacing-x-small);
-    }
-  }
-
   &__text.dnb-p {
     color: var(--color-black-55);
   }
